# ava-trading-esp32

./: .gitignore  .gitmodules  README.md  README_zh.md
ava-devicekit/: README.md  pyproject.toml
ava-devicekit/adapters/solana/: README.md
ava-devicekit/apps/ava_box/: manifest.json
ava-devicekit/backend/ava_devicekit/: __init__.py  cli.py
ava-devicekit/backend/ava_devicekit/adapters/: __init__.py  base.py  mock_solana.py  registry.py  solana.py
ava-devicekit/backend/ava_devicekit/apps/: __init__.py  ava_box.py  ava_box_skills.py  base.py  registry.py
ava-devicekit/backend/ava_devicekit/control_plane/: __init__.py  store.py  usage.py
ava-devicekit/backend/ava_devicekit/core/: contracts.py  manifest.py  schemas.py  types.py
ava-devicekit/backend/ava_devicekit/formatting/: __init__.py  numbers.py
ava-devicekit/backend/ava_devicekit/gateway/: __init__.py  admin_page.py  audio.py  customer_page.py  dev_server.py  factory.py  firmware_compat.py  http_server.py  legacy_firmware.py  runtime_manager.py  server.py  session.py  websocket_server.py  xiaozhi_compat.py
ava-devicekit/backend/ava_devicekit/model/: router.py
ava-devicekit/docs/: ai-depin-cloud-prd.md  build-your-first-app.md  c-end-hardware-ops-prd.md  compatibility-capability-inventory.md  completion-status.md  device-protocol.md  framework-vs-avabox.md  generic-screen-input-context.md  getting-started.md  hardware-service-product-closure.md  legacy-capability-inventory.md  ota-and-developer-services.md  package-release.md  port-a-board.md  production-deploy.md  provider-setup.md  security-hardening.md  solana-reference-repos-review.md  technical-architecture-and-builder-guide-zh.md  xiaozhi-capability-inventory.md
ava-devicekit/examples/: demo_flow.py  developer_zero_to_one_flow.py  mock_device_client.py
ava-devicekit/firmware/: README.md
ava-devicekit/firmware/include/: ava_devicekit_runtime.h
ava-devicekit/firmware/src/: ava_devicekit_runtime.c
ava-devicekit/firmware/tests/: test_ava_devicekit_runtime.c
ava-devicekit/reference_apps/ava_box/: CMakeLists.txt  README.md
ava-devicekit/schemas/: action_draft.schema.json  context_snapshot.schema.json  developer_service.schema.json  device_identity.schema.json  device_telemetry.schema.json  hardware_app.schema.json  input_event.schema.json  screen_contract.schema.json  screen_payload.schema.json  transport_profile.schema.json
ava-devicekit/shared_ui/: README.md
ava-devicekit/shared_ui/include/: ava_devicekit_ui.h
ava-devicekit/shared_ui/screens/: README.md  ava_box_screen_contracts.md
ava-devicekit/shared_ui/src/: ava_devicekit_ui.c
ava-devicekit/shared_ui/tests/: test_ava_devicekit_ui.c
ava-devicekit/tests/: test_ava_box_skills.py  test_background_tasks.py  test_board_templates.py  test_cli.py  test_contracts.py  test_control_plane.py  test_developer_services.py  test_firmware_compat_gateway.py  test_framework_health_state.py  test_gateway_factory.py  test_gateway_server.py  test_http_gateway.py  test_json_store.py  test_legacy_firmware_gateway.py  test_number_formatting.py  test_ota_runtime.py  test_providers_and_streams.py  test_runtime_events.py  test_runtime_manager.py  test_shared_ui_c.py  test_solana_adapter.py  test_xiaozhi_compat_gateway.py
ava-devicekit/tests/conformance/: test_provider_contracts.py  test_reference_app_manifests.py
ava-devicekit/userland/: README.md  capabilities.json  env.example  runtime.example.json
ava-devicekit/userland/adapter/: README.md  chain_adapter_template.py  market_stream_adapter_template.py
ava-devicekit/userland/app/: README.md  app_template.py  manifest.template.json
ava-devicekit/userland/hardware_port/: README.md  secure_element_profile.md
ava-devicekit/userland/provider/: README.md  provider.catalog.example.json
ava-devicekit/userland/ui/: README.md
config/: README.md
shared/ave_screens/: CMakeLists.txt  README.md  ave_font_provider.c  ave_font_provider.h  ave_price_fmt.c  ave_price_fmt.h  ave_screen_manager.c  ave_screen_manager.h  ave_transport.c  screen_browse.c  screen_confirm.c  screen_disambiguation.c  screen_explorer.c  screen_feed.c  screen_limit_confirm.c  screen_notify.c  screen_portfolio.c  screen_result.c  screen_spotlight.c
(+1029 files in other folders)
