[project]
name = "ava-devicekit"
version = "0.1.0"
description = "Full-stack ESP32 framework for Solana AI hardware apps."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
ava-devicekit = "ava_devicekit.cli:main"


[project.optional-dependencies]
audio = ["opuslib>=3"]
websocket = ["websockets>=12", "websocket-client>=1.7"]
dev = ["jsonschema>=4", "pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
ava_devicekit = []

[tool.setuptools.data-files]
"share/ava-devicekit/userland" = ["userland/*.json", "userland/*.example", "userland/*.md"]
"share/ava-devicekit/userland/app" = ["userland/app/*"]
"share/ava-devicekit/userland/adapter" = ["userland/adapter/*"]
"share/ava-devicekit/userland/provider" = ["userland/provider/*"]
"share/ava-devicekit/userland/hardware_port" = ["userland/hardware_port/*.md"]
"share/ava-devicekit/userland/hardware_port/templates" = ["userland/hardware_port/templates/*"]
"share/ava-devicekit/userland/ui" = ["userland/ui/*"]
"share/ava-devicekit/examples/apps/payment_terminal" = ["examples/apps/payment_terminal/*"]
"share/ava-devicekit/examples/apps/token_alert" = ["examples/apps/token_alert/*"]
"share/ava-devicekit/examples/apps/sensor_registry" = ["examples/apps/sensor_registry/*"]
